# square-array

./: Cargo.toml  README.md
src/: main.rs
