[package]
name = "array_square"
version = "0.1.0"
authors = ["H <hugoalexgr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon={git="https://github.com/wagnerf42/rayon", branch="tracing"}
# rayon="1.4.1" # uncomment me and comment line above to disable logs for better performances
itertools="*"
rand="*"
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}